feat: format code